no copy covid 4f

--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,6 @@ plot/
 covidItaData/
 
 #to avoid copy of students
-#covidInfections.py
-#covidInfections.json
+covidInfections.py
+covidInfections.json
 
