--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,6 @@ plot/
 covidItaData/
 
 #to avoid copy of students
-covidInfections.py
-covidInfections.json
+covidInfection.py
+covidInfection.json
 
